{
    "name": "InputActions",
    "maps": [],
    "controlSchemes": [
        {
            "name": "PlayerControl",
            "bindingGroup": "PlayerControl",
            "devices": []
        },
        {
            "name": "UIControl",
            "bindingGroup": "UIControl",
            "devices": []
        }
    ]
}